# hybridhudv9

./: CMakeLists.txt  README.md  bluetooth_manager.cpp  partitions.csv  sdkconfig.defaults
components/waveshare__esp32_s3_touch_amoled_1_75/: esp32_s3_touch_amoled_1_75.c
components/waveshare__esp32_s3_touch_amoled_1_75/include/bsp/: display.h
main/: CMakeLists.txt  idf_component.yml  main.c  screen.c  screen.h
main/ble/: ble.c  ble.h  conn.c  conn.h  scan.c  scan.h
main/hw/: audio.c  audio.h  board.c  board.h  imu.c  imu.h  key.c  key.h  pmu.c  pmu.h  rtc.c  rtc.h  sd.c  sd.h
main/obd/: ecu.c  ecu.h  elm.c  elm.h  obd.c  obd.h
main/pages/: bluetooth.c  bluetooth.h  general.c  general.h  race.c  race.h  setting.c  setting.h
main/ui/: hud.guiguider
main/ui/custom/: custom.c
