idf_component_register(
    SRCS
        "main.c"
        "screen.c"
        "pages/general.c"
        "pages/race.c"
        "pages/setting.c"
        "pages/bluetooth.c"
        "obd/obd.c"
        "obd/elm.c"
        "obd/ecu.c"
        "ble/ble.c"
        "ble/scan.c"
        "ble/conn.c"
        "hw/board.c"
        "hw/imu.c"
        "hw/rtc.c"
        "hw/pmu.c"
        "hw/audio.c"
        "hw/sd.c"
        "ui/custom/custom.c"
        "ui/generated/gui_guider.c"
        "ui/generated/events_init.c"
        "ui/generated/widgets_init.c"
        "ui/generated/setup_scr_general.c"
        "ui/generated/setup_scr_race.c"
        "ui/generated/setup_scr_setting.c"
        "ui/generated/setup_scr_bluetooth.c"
    INCLUDE_DIRS
        "."
        "pages"
        "obd"
        "ble"
        "hw"
        "ui/custom"
        "ui/generated"
)