idf_component_register(
    SRCS
        "main.c"
        "screen.c"
        "pages/race.c"
        "pages/bluetooth.c"
        "obd/obd.c"
        "obd/elm.c"
        "obd/ecu.c"
        "ble/ble.c"
        "ble/scan.c"
        "ble/conn.c"
        "hw/key.c"
        "hw/board.c"
        "hw/imu.c"
        "hw/rtc.c"
        "hw/pmu.c"
        "hw/audio.c"
        "hw/sd.c"
        "ui/custom/custom.c"
        "ui/generated/gui_guider.c"
        "ui/generated/events_init.c"
        "ui/generated/widgets_init.c"
        "ui/generated/setup_scr_race.c"
        "ui/generated/setup_scr_bluetooth.c"
        "ui/generated/guider_fonts/lv_font_montserratMedium_16.c"
        "ui/generated/guider_fonts/lv_font_OPPOSans_Medium_16.c"
        "ui/generated/guider_fonts/lv_font_OPPOSans_Medium_18.c"
        "ui/generated/guider_fonts/lv_font_OPPOSans_Medium_36.c"
        "ui/generated/guider_fonts/lv_font_OPPOSans_Bold_58.c"
        "ui/generated/images/_Gforce_RGB565A8_320x320.c"
        "ui/generated/images/_e_RGB565A8_24x18.c"
        "ui/generated/images/_o_RGB565A8_20x18.c"
        "ui/generated/images/_tempunit_RGB565A8_18x16.c"
    INCLUDE_DIRS
        "."
        "pages"
        "obd"
        "ble"
        "hw"
        "ui/custom"
        "ui/generated"
        "ui/generated/guider_fonts"
        "ui/generated/images"
    REQUIRES
        lvgl
        esp_lvgl_adapter
        nvs_flash
        bt
        driver
    PRIV_REQUIRES
        esp_timer
        esp_wifi
)